--- a/css/index.css
+++ b/css/index.css
@@ -48,24 +48,17 @@
     height: unset;
   }
 
-  .footer_txt {
-    left: 71%;
-  }
-
-.footer_list {
-    top: 22%;
-  }
 }
 
 @media screen and (max-width: 768px) {
 
   header .navbar ul li {
-    margin: 5px;
     padding-right: 10px;
   }
 
   header .navbar ul li a {
     font-size: 15px;
+  }
 
   header .sns img {
     padding-right: 5px;
@@ -73,10 +66,6 @@
 
   header .logo {
     padding: 5px 0 0 5px;
-  }
-
-  header .logo img {
-    width: 40px;
   }
 
   .font1 {
@@ -91,6 +80,15 @@
 
 
 @media screen and (max-width: 480px) {
+
+  .top_img img {
+    width: 100%;
+  }
+
+  .top {
+    margin: 30px 0;
+  }
+
   .greetings .inner {
     padding: 32px;
   }
@@ -101,7 +99,7 @@
   }
 
   header .navbar ul li a {
-    font-size: 10px;
+    font-size: 15px;
   }
 
   .greetings {
