--- a/css/service.css
+++ b/css/service.css
@@ -2,7 +2,7 @@
 
 .service {
   margin: 0 auto;
-  margin-bottom: 200px;
+  margin-bottom: 100px;
   position: relative;
   height: 550px;
 }
@@ -13,6 +13,7 @@
   text-align: left;
   position: relative;
   width: 100%;
+  left: -50px;
   margin: 50px 0;
   color: #949387;
   text-shadow: rgba(150, 134, 126, 0.5) 2px 2px 2px;
@@ -23,7 +24,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 20%;
+  width: 30%;
   height: 2px;
   margin: 0 auto;
   text-align: right;
@@ -58,17 +59,17 @@
 
 .service_txt {
   margin-top: 5px;
-  width: 40%;
+  width: 50%;
   height: 100px;
   position: absolute;
-  left: 0;
+  left: -50px;
 }
 
 .service_top {
-  width: 40%;
+  width: 56%;
   top: 360px;
   position: absolute;
-  left: 0;
+  left: -65px;
   height: 100px;
 }
 
@@ -199,7 +200,8 @@
   text-align: left;
   position: relative;
   width: 100%;
-  margin: 80px 0 0 130px;
+  left: -50px;
+  margin: 80px 0 0 92px;
   color: #949387;
   text-shadow: rgba(150, 134, 126, 0.5) 2px 2px 2px;
 }
@@ -208,11 +210,11 @@
   content: "";
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: -10px;
   width: 25%;
   height: 2px;
   margin: 0 auto;
-  text-align: right;
+  text-align: left;
   background-image: -webkit-linear-gradient(
     right,
     transparent,
@@ -315,10 +317,10 @@ p.bar_txt {
 }
 
 .service_item4 p {
-  width: 28%;
+  width: 60%;
   position: absolute;
   top: 750px;
-  left: 10%;
+  left: 35px;
 }
 
 .service_item5 img {
@@ -364,11 +366,11 @@ p.bicycle_txt {
   }
 
   .font3::before {
-    width: 10%;
+    width: 30%;
   }
 
   .font4 {
-    margin: 210px 0 0 130px;
+    margin: 210px 0 0 92px;
   }
 
   .font4::before {
@@ -398,11 +400,11 @@ p.bicycle_txt {
     width: 28%;
     position: absolute;
     top: 388px;
-    left: -2%;
+    left: -50px;
   }
 
   .service_item4 p {
-    width: 37%;
+    width: 45%;
     top: 711px;
   }
 
@@ -423,6 +425,7 @@ p.bicycle_txt {
 }
 
 @media screen and (max-width: 768px) {
+  
   .service_body {
     height: 1150px;
     margin-bottom: 100px;
@@ -435,6 +438,7 @@ p.bicycle_txt {
   .font3 {
     font-size: 30px;
     top: 35px;
+    left: -37px;
   }
 
   .font3::before {
@@ -449,7 +453,8 @@ p.bicycle_txt {
   }
 
   .service_txt {
-    width: 48%;
+    width: 53%;
+    left: -34px;
   }
 
   .service_top {
